# tinycaml-enclave

./: dune-project  enclave.opam
lib/: ast.ml  env.ml  interpreter.ml  rts.ml  sec.ml  utils.ml
