(lang dune 3.7)

(name enclave)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Federico Silvestri", "Davide Bertolucci", "Francesco De Marchi" )

(maintainers "Federico Silvestri", "Davide Bertolucci", "Francesco De Marchi")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name enclave)
 (synopsis "HW1")
 (description "HW1")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
